; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_vxlan.c_vxlan_get_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_vxlan.c_vxlan_get_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.net_device*)* @vxlan_get_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @vxlan_get_size(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %3 = call i64 @nla_total_size(i32 4)
  %4 = call i64 @nla_total_size(i32 4)
  %5 = add i64 %3, %4
  %6 = call i64 @nla_total_size(i32 4)
  %7 = add i64 %5, %6
  %8 = call i64 @nla_total_size(i32 4)
  %9 = add i64 %7, %8
  %10 = call i64 @nla_total_size(i32 4)
  %11 = add i64 %9, %10
  %12 = call i64 @nla_total_size(i32 4)
  %13 = add i64 %11, %12
  %14 = call i64 @nla_total_size(i32 4)
  %15 = add i64 %13, %14
  %16 = call i64 @nla_total_size(i32 4)
  %17 = add i64 %15, %16
  %18 = call i64 @nla_total_size(i32 4)
  %19 = add i64 %17, %18
  %20 = call i64 @nla_total_size(i32 4)
  %21 = add i64 %19, %20
  %22 = call i64 @nla_total_size(i32 4)
  %23 = add i64 %21, %22
  %24 = call i64 @nla_total_size(i32 4)
  %25 = add i64 %23, %24
  %26 = call i64 @nla_total_size(i32 4)
  %27 = add i64 %25, %26
  %28 = call i64 @nla_total_size(i32 4)
  %29 = add i64 %27, %28
  %30 = call i64 @nla_total_size(i32 4)
  %31 = add i64 %29, %30
  %32 = add i64 %31, 0
  ret i64 %32
}

declare dso_local i64 @nla_total_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
